--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
+    <div style="font-size:36px; color:hsl(240, 100%, 50%)">Number 2 - I'm one ID.</div>
+    <p id="thirdline">Number 3 - I'm a class, but cooler!</p>
+    <div style="background-color:hwb(120 56% 7%); font-weight:bold; font-size:24px">Number 4 - I'm another ID.</div>
     <p>Number 5 - I'm a class!</p>
   </body>
 </html>
