--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button id="yes-click"; class="big-font">Click Me!</button>
+    <button id="no-click"; class="big-font">No, Click Me!</button>
   </body>
 </html>
