Remove extra lines of code
Got rid of IDs for buttons and used the grouping selector for styles
that both elements share

--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button id="yes-click"; class="big-font">Click Me!</button>
-    <button id="no-click"; class="big-font">No, Click Me!</button>
+    <button class="yes-click"; >Click Me!</button>
+    <button class="no-click"; >No, Click Me!</button>
   </body>
 </html>
