--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -18,7 +18,7 @@
           <li><a href="google.com">link-two</a></li>
           <li><a href="google.com">link-three</a></li>
         </ul>
-      <div class="account_nofity">
+      <div class="account_notify">
         <button class="notifications">
           1 new notification
         </button>
